[project]
name = "dio-blog"
version = "0.1.0"
description = ""
authors = [
    {name = "Rafael Feitosa",email = "rafaelfeit@hotmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard] (>=0.41.0,<0.42.0)",
    "databases[aiosqlite] (>=0.9.0,<0.10.0)"
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.1"
pytest-mock = "^3.15.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"
